# winsplit-revolution-revived

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Hook.vcxproj  README.md  STATUS-REPORT.md  TASKS.md  Winsplit Revolution.sln  Winsplit.vcxproj  build.cmd  compile-translations.ps1  download-gettext.ps1
.github/workflows/: build.yml
docs/: README.md  v10.2.2-enhancement-requests.md
hook_src/: main.cpp  ressource.rc
nsis/: Winsplit-SetupScript.nsi
nsis/files/: NSIS_Functions.nsh
src/: auto_placement.cpp  auto_placement.h  dialog_about.cpp  dialog_activewndtools.h  dialog_download.cpp  dialog_download.h  dialog_fusion.h  dialog_hotkeys.cpp  dialog_hotkeys.h  dialog_layout.cpp  dialog_layout.h  dialog_options.cpp  dialog_selectsettings.cpp  dialog_warnhotkeys.h  direction.h  dwm_utils.cpp  dwm_utils.h  frame_hook.cpp  frame_hook.h  frame_virtualnumpad.cpp  frame_virtualnumpad.h  functions_resize.cpp  functions_resize.h  functions_special.cpp  hook.h  hotkey_number.h  hotkeys_manager.cpp  hotkeys_manager.h  layout_manager.cpp  layout_manager.h  list_windows.h  lmpreview.h  main.cpp  minimize_restore.h  multimonitor_move.cpp  multimonitor_move.h  resource.h  ressource.rc  settingsmanager.cpp  tray_icon.cpp  (+4 more)
tests/: CMakeLists.txt  README.md  build.cmd  build_cmake.cmd  run_all_tests.cmd
tests/functional/: catch2_dpi_awareness.cpp  catch2_multimonitor.cpp  catch2_window_positioning.cpp  test_dpi_awareness.cpp  test_multimonitor.cpp  test_regression.cpp  test_window_positioning.cpp
tests/pentest/: run_pentest.cmd  setup_pentest_tools.cmd
tests/security/: gtest_dll_security.cpp  gtest_hook_spoofing.cpp  gtest_http_updates.cpp  gtest_xml_injection.cpp  test_dll_hijacking.cpp  test_hook_message_spoofing.cpp  test_http_updates.cpp  test_xml_injection.cpp
tests/shutdown/: gtest_shutdown_cleanup.cpp
tests/stress/: test_memory_leaks.cpp  test_rapid_hotkeys.cpp
tests/tools/: message_spoofer.cpp  mock_window.cpp  test_harness.h
upstream/: CHANGELOG.md  README.md  Winsplit.vcxproj
upstream/hook_src/: main.cpp
upstream/images/: icone.xpm  tray2.xpm  tray3.xpm  tray4.xpm  tray5.xpm  tray6.xpm
upstream/images/fluent-icons/: README.md  convert-icons.ps1  download-icons.ps1
upstream/nsis/: Winsplit-SetupScript.nsi
upstream/src/: debug_log.h  dialog_about.cpp  dialog_about.h  dialog_activewndtools.cpp  dialog_fusion.cpp  dialog_hotkeys.cpp  dialog_options.cpp  dialog_options.h  dialog_selectsettings.h  dialog_update.cpp  dialog_update.h  dialog_warnhotkeys.cpp  dwm_utils.cpp  frame_hook.cpp  frame_virtualnumpad.cpp  functions_special.cpp  hotkeys_manager.cpp  layout_screens.cpp  list_windows.cpp  lmpreview.cpp  main.cpp  main.h  minimize_restore.h  ressource.rc  settingsmanager.cpp  settingsmanager.h  tray_icon.cpp  tray_icon.h  update_thread.cpp  update_thread.h  virtual_key_manager.cpp  virtual_key_manager.h
